Overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,9 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  min-width: 100%;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 .App-header {
